--- a/index.html
+++ b/index.html
@@ -7,13 +7,47 @@
     <title>Tarea 1</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa corporis error quas id, eius saepe.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur <strong>adipisicing elit</strong>. Cupiditate recusandae omnis animi impedit repellendus aliquam.</p>
-    <ul>
-        <li>Lorem ipsum dolor sit amet</li>
-        <li>Quick brown fox jumps over the lazy dog</li>
-        <li>Jovencillo emponzoñado de whisky, qué figurota exhibe</li>
-    </ul>
+    <div id="header">
+      <img src="images/foto.jpg" alt="foto" width="200" height="200">
+    </div>
+  <h1>Curricum Vitae</h1>
+&ensp;
+<¡-- Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos.-->
+<¡-- A lo largo de la construcción del currriculum se utilizan strong y el comando i para etiquetar textos a los cuáles en capas siguientes se le darán estilos-->
+    <h2><p>Antecedentes Personales</p></h2>
+      <ul>
+        <h3><li><p><strong>Nombre:</strong> Ignacio Andrés Oliva Ahumada</p></h3></li></iframe>
+        <h3><li><p><strong>Fecha de Nacimiento:</strong> 23 de Septiembre de 1994</p></h3></li></iframe>
+        <h3><li><p><strong>Rut:</strong> 18.705.881-3</p></h3></li></iframe>
+        <h3><li><p><strong>Nacionalidad:</strong> Chilena</p></h3></li></iframe>
+        <h3><li><p><strong>Estado Civil:</strong> Soltero</p></h3></li></iframe>
+      </ul>
+&ensp; <¡--Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos.-->
+    <h2><p>Antecedentes Educacionales</p></h2>
+      <ul>
+        <h3><li><p><strong>Educación Básica:</strong> Completa</p></h3></li>
+        <h3><li><p><strong>Primer año(2001):</strong><i> Colegio Adriano Machado</i></p></h3></li>
+        <h3><li><p><strong>Segundo año a Octavo(2002-2008):</strong><i>Colegio Rubén Castro</i></p></h3></li>
+        <h3><li><p><strong>Educación Media:</strong> Completa</p></h3></li>
+        <h3><li><p><strong>Primer año a Cuarto año(2009-2012):</strong><i> Colegio Rubén Castro</i></p></h3></li>
+        <h3><li><p><strong>Educación Superior:</strong> En Curso</p></h3></li>
+        <h3><li><p><strong>Cuarto Año(Diseño Gráfico):</strong><i> PUCV</i></p></h3></li>
+        <h3><li><p><i>Estudios previos de Arquitectura en la misma Universidad.</i></p></h3></li>
+      </ul>
+&ensp;  <¡-- Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos. -->
+    <h2><p>Ramos Optativos Cursados</p></h2>
+      <ul>
+        <h3><li><p><a href="https://wiki.ead.pucv.cl/Lenguaje_Computacional_1">Lenguaje Computacional 1:</a><i> Jorge Barahona</i></p></h3></li>
+        <h3><li><p><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_de_Experiencia_de_Usuario">Diseño de Experiencia de Usuario:</a><i> Jorge Barahona</i></p></h3></li>
+        <h3><li><p><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_desde_el_C%C3%B3digo">Diseño desde el Código:</a><i> Basilio Cáceres y Felipe Lavín</i></p></h3></li>
+      </ul>
+&ensp; <¡-- Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos. -->
+    <h2><p>Proyectos Realizados</p></h2>
+      <ul>
+        <h3><li><p><a href="https://wiki.ead.pucv.cl/Proyecto_Final_Ignacio_Oliva">Proyecto Final Taller de Tipografía 2017: 1:</a><i> Relación Heterógenea/Homogénea</i></p></h3></li>
+        <h3><li><p><a href="https://www.instagram.com/insomnia_teatro_condell/">Diseño de Piezas Gráficas:</a><i> Insomnia Teatro Condell</i></p></h3></li>
+        <h3><li><p><a href="https://wiki.ead.pucv.cl/Configuraci%C3%B3n_en_Tensi%C3%B3n_:_El_peri%C3%B3dico_en_una_resoluci%C3%B3n_heter%C3%B3genea/hom%C3%B3genea">Proyecto de estudio, Taller de Tipografía 2017:</a><i>
+        Configuración en Tensión</i></p></h3></li>
+      </ul>
 </body>
 </html>
