--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="header">
       <img src="images/foto.jpg" alt="foto" width="200" height="200">
     </div>
-  <h1>Curricum Vitae</h1>
+</body>
+<body>    
+    <h1>Curricum Vitae</h1>
 &ensp;
-<¡-- Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos.-->
-<¡-- A lo largo de la construcción del currriculum se utilizan strong y el comando i para etiquetar textos a los cuáles en capas siguientes se le darán estilos-->
     <h2><p>Antecedentes Personales</p></h2>
       <ul>
         <h3><li><p><strong>Nombre:</strong> Ignacio Andrés Oliva Ahumada</p></h3></li></iframe>
@@ -22,7 +22,7 @@
         <h3><li><p><strong>Nacionalidad:</strong> Chilena</p></h3></li></iframe>
         <h3><li><p><strong>Estado Civil:</strong> Soltero</p></h3></li></iframe>
       </ul>
-&ensp; <¡--Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos.-->
+&ensp;
     <h2><p>Antecedentes Educacionales</p></h2>
       <ul>
         <h3><li><p><strong>Educación Básica:</strong> Completa</p></h3></li>
@@ -34,14 +34,14 @@
         <h3><li><p><strong>Cuarto Año(Diseño Gráfico):</strong><i> PUCV</i></p></h3></li>
         <h3><li><p><i>Estudios previos de Arquitectura en la misma Universidad.</i></p></h3></li>
       </ul>
-&ensp;  <¡-- Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos. -->
+&ensp;
     <h2><p>Ramos Optativos Cursados</p></h2>
       <ul>
         <h3><li><p><a href="https://wiki.ead.pucv.cl/Lenguaje_Computacional_1">Lenguaje Computacional 1:</a><i> Jorge Barahona</i></p></h3></li>
         <h3><li><p><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_de_Experiencia_de_Usuario">Diseño de Experiencia de Usuario:</a><i> Jorge Barahona</i></p></h3></li>
         <h3><li><p><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_desde_el_C%C3%B3digo">Diseño desde el Código:</a><i> Basilio Cáceres y Felipe Lavín</i></p></h3></li>
       </ul>
-&ensp; <¡-- Se utilizan jerarquías h2 para subtítulo y h3 para contenidos bajo estos. -->
+&ensp;
     <h2><p>Proyectos Realizados</p></h2>
       <ul>
         <h3><li><p><a href="https://wiki.ead.pucv.cl/Proyecto_Final_Ignacio_Oliva">Proyecto Final Taller de Tipografía 2017: 1:</a><i> Relación Heterógenea/Homogénea</i></p></h3></li>
