--- a/index.html
+++ b/index.html
@@ -8,44 +8,44 @@
 </head>
 <body>
     <div id="header">
-      <img src="images/foto.jpg" alt="foto" width="200" height="200">
+      <img src="images/foto.jpg" alt="foto" width="200" height="200">  <!-- Se utiliza el header para posicionar el contenido mediante el etiquetado -->
     </div>
-    <h1>Curricum Vitae</h1>
+    <h1>Curricum Vitae</h1> Se utiliza el h1 para etiquetar una primera jerarquía
 &ensp;
-    <h2>Antecedentes Personales</h2>
+    <h2>Antecedentes Personales</h2> <!-- Se utiliza el h2 para jerarquía de subtítulo y el h4 de contenido -->
       <ul>
-        <li><p><strong>Nombre:</strong> Ignacio Andrés Oliva Ahumada</p></li>
-        <li><p><strong>Fecha de Nacimiento:</strong> 23 de Septiembre de 1994</p></li>
-        <li><p><strong>Rut:</strong> 18.705.881-3</p></li>
-        <li><p><strong>Nacionalidad:</strong> Chilena</p></li>
-        <li><p><strong>Estado Civil:</strong> Soltero</p></li>
+        <li><h4><strong>Nombre:</strong> Ignacio Andrés Oliva Ahumada</h4></li>
+        <li><h4><strong>Fecha de Nacimiento:</strong> 23 de Septiembre de 1994</h4></li>
+        <li><h4><strong>Rut:</strong> 18.705.881-3</h4></li>
+        <li><h4><strong>Nacionalidad:</strong> Chilena</h4></li>
+        <li><h4><strong>Estado Civil:</strong> Soltero</h4></li>
       </ul>
 &ensp;
-    <h2>Antecedentes Educacionales</h2>
+    <h2>Antecedentes Educacionales</h2> <!-- Se utiliza el h2 para jerarquía de subtítulo y el h4 de contenido -->
       <ul>
-        <li><p><strong>Educación Básica:</strong> Completa</p></li>
-        <li><p><strong>Primer año(2001):</strong><i> Colegio Adriano Machado</i></p></li>
-        <li><p><strong>Segundo año a Octavo(2002-2008):</strong><i>Colegio Rubén Castro</i></p></li>
-        <li><p><strong>Educación Media:</strong> Completa</p></li>
-        <li><p><strong>Primer año a Cuarto año(2009-2012):</strong><i> Colegio Rubén Castro</i></p></li>
-        <li><p><strong>Educación Superior:</strong> En Curso</p></li>
-        <li><p><strong>Cuarto Año(Diseño Gráfico):</strong><i> PUCV</i></p></li>
-        <li><p><i>Estudios previos de Arquitectura en la misma Universidad.</i></p></li>
+        <li><h4><strong>Educación Básica:</strong> Completa</h4></li>
+        <li><h4><strong>Primer año(2001):</strong><i> Colegio Adriano Machado</i></h4></li>
+        <li><h4><strong>Segundo año a Octavo(2002-2008):</strong><i>Colegio Rubén Castro</i></h4></li>
+        <li><h4><strong>Educación Media:</strong> Completa</h4></li>
+        <li><h4><strong>Primer año a Cuarto año(2009-2012):</strong><i> Colegio Rubén Castro</i></h4></li>
+        <li><h4><strong>Educación Superior:</strong> En Curso</h4></li>
+        <li><h4><strong>Cuarto Año(Diseño Gráfico):</strong><i> PUCV</i></h4></li>
+        <li><h4><i>Estudios previos de Arquitectura en la misma Universidad.</i></h4></li>
       </ul>
 &ensp;
-    <h2>Ramos Optativos Cursados</h2>
+    <h2>Ramos Optativos Cursados</h2> <!-- Se utiliza el h2 para jerarquía de subtítulo y el h4 de contenido. El atributo href para vínculos-->
       <ul>
-        <li><p><a href="https://wiki.ead.pucv.cl/Lenguaje_Computacional_1">Lenguaje Computacional 1:</a><i> Jorge Barahona</i></p></li>
-        <li><p><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_de_Experiencia_de_Usuario">Diseño de Experiencia de Usuario:</a><i> Jorge Barahona</i></p></li>
-        <li><p><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_desde_el_C%C3%B3digo">Diseño desde el Código:</a><i> Basilio Cáceres y Felipe Lavín</i></p></li>
+        <li><h4><a href="https://wiki.ead.pucv.cl/Lenguaje_Computacional_1">Lenguaje Computacional 1:</a><i> Jorge Barahona</i></h4></li>
+        <li><h4><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_de_Experiencia_de_Usuario">Diseño de Experiencia de Usuario:</a><i> Jorge Barahona</i></h4></li>
+        <li><h4><a href="https://wiki.ead.pucv.cl/Dise%C3%B1o_desde_el_C%C3%B3digo">Diseño desde el Código:</a><i> Basilio Cáceres y Felipe Lavín</i></h4></li>
       </ul>
 &ensp;
-    <h2>Proyectos Realizados</h2>
+    <h2>Proyectos Realizados</h2> <!-- Se utiliza el h2 para jerarquía de subtítulo y el h4 de contenido. El atributo href para vínculos -->
       <ul>
-        <li><p><a href="https://wiki.ead.pucv.cl/Proyecto_Final_Ignacio_Oliva">Proyecto Final Taller de Tipografía 2017: 1:</a><i> Relación Heterógenea/Homogénea</i></p></li>
-        <li><p><a href="https://www.instagram.com/insomnia_teatro_condell/">Diseño de Piezas Gráficas:</a><i> Insomnia Teatro Condell</i></p></li>
-        <li><p><a href="https://wiki.ead.pucv.cl/Configuraci%C3%B3n_en_Tensi%C3%B3n_:_El_peri%C3%B3dico_en_una_resoluci%C3%B3n_heter%C3%B3genea/hom%C3%B3genea">Proyecto de estudio, Taller de Tipografía 2017:</a><i>
-        Configuración en Tensión</i></p></li>
+        <li><h4><a href="https://wiki.ead.pucv.cl/Proyecto_Final_Ignacio_Oliva">Proyecto Final Taller de Tipografía 2017: 1:</a><i> Relación Heterógenea/Homogénea</i></h4></li>
+        <li><h4><a href="https://www.instagram.com/insomnia_teatro_condell/">Diseño de Piezas Gráficas:</a><i> Insomnia Teatro Condell</i></h4></li>
+        <li><h4><a href="https://wiki.ead.pucv.cl/Configuraci%C3%B3n_en_Tensi%C3%B3n_:_El_peri%C3%B3dico_en_una_resoluci%C3%B3n_heter%C3%B3genea/hom%C3%B3genea">Proyecto de estudio, Taller de Tipografía 2017:</a><i>
+        Configuración en Tensión</i></h4></li>
       </ul>
 </body>
 </html>
