--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
       <img src="images/foto.jpg" alt="foto" width="200" height="200">  <!-- Se utiliza el header para posicionar el contenido mediante el etiquetado -->
     </div>
-    <h1>Curricum Vitae</h1> Se utiliza el h1 para etiquetar una primera jerarquía
+    <h1>Curricum Vitae</h1> <!-- Se utiliza el h1 para declarar la primera jerarquía -->
 &ensp;
     <h2>Antecedentes Personales</h2> <!-- Se utiliza el h2 para jerarquía de subtítulo y el h4 de contenido -->
       <ul>
