--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 &ensp;
     <h2>Proyectos Realizados</h2> <!-- Se utiliza el h2 para jerarquía de subtítulo y el h4 de contenido. El atributo href para vínculos -->
       <ul>
-        <li><h4><a href="https://wiki.ead.pucv.cl/Proyecto_Final_Ignacio_Oliva">Proyecto Final Taller de Tipografía 2017: 1:</a><i> Relación Heterógenea/Homogénea</i></h4></li>
-        <li><h4><a href="https://www.instagram.com/insomnia_teatro_condell/">Diseño de Piezas Gráficas:</a><i> Insomnia Teatro Condell</i></h4></li>
+        <li><h4><a href="https://wiki.ead.pucv.cl/Proyecto_Final_Ignacio_Oliva">Proyecto Final Taller de Tipografía 2017: 1:</a><i> Relación Heterógenea/Homogénea</i></h4><h5>El Proyecto consistía en dar cuenta mediante pictográmas de una construcción en la página que declará esta puja en la relación de elementos</h5></li>
+        <li><h4><a href="https://www.instagram.com/insomnia_teatro_condell/">Diseño de Piezas Gráficas:</a><i> Insomnia Teatro Condell</i></h4><h5>El Proyecto consiste en diseñar piezas gráficas para comunicar acerca del acontecer del Cine Insomnia Teatro-Condell</h5></li>
         <li><h4><a href="https://wiki.ead.pucv.cl/Configuraci%C3%B3n_en_Tensi%C3%B3n_:_El_peri%C3%B3dico_en_una_resoluci%C3%B3n_heter%C3%B3genea/hom%C3%B3genea">Proyecto de estudio, Taller de Tipografía 2017:</a><i>
-        Configuración en Tensión</i></h4></li>
+        Configuración en Tensión</i></h4><h5>El Proyecto consistía investigar la configuración de las páginas de un periódico, respecto a sus jerarquías y elementos tipográficos</h5></li>
       </ul>
 </body>
 </html>
